--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,11 @@ textarea {
   padding-right: 15px;
 }
 
+.section {
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+
 @media screen and (min-width: 768px) {
   .container {
     max-width: 768px;
@@ -61,11 +66,11 @@ textarea {
   .container {
     max-width: 1158px;
   }
-}
 
-.section {
-  padding-top: 120px;
-  padding-bottom: 120px;
+  .section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
 }
 
 .section.no-padding {
@@ -179,9 +184,7 @@ textarea {
 }
 
 .mobile-menu {
-  /* pointer-events: none;
-  visibility: hidden;
-  opacity: 0; */
+  pointer-events: none;
   position: fixed;
   top: 0;
   left: 0;
@@ -392,8 +395,29 @@ textarea {
 
 /* Footer */
 
-.footer-content {
-  display: flex;
+@media screen and (min-width: 768px) {
+  .footer-content {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .footer-left {
+    margin-bottom: 0;
+  }
+  .subscribe-form {
+    display: flex;
+    gap: 24px;
+  }
+
+  .footer-input {
+    width: 264px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-center {
+    margin-right: 80px;
+  }
 }
 
 .footer {
@@ -407,6 +431,7 @@ textarea {
   flex-direction: column;
   justify-content: left;
   margin-right: 120px;
+  margin-bottom: 72px;
 }
 
 .footer-logo {
@@ -440,7 +465,7 @@ textarea {
 
 /* Footer-icons */
 .footer-center {
-  margin-right: 80px;
+  margin-bottom: 72px;
 }
 
 .social-media {
@@ -476,13 +501,8 @@ textarea {
 
 /* Subscribe */
 
-.subscribe-form {
-  display: flex;
-  gap: 24px;
-}
-
 .footer-input {
-  width: 264px;
+  width: 398px;
   height: 40px;
   background-color: transparent;
   color: var(--white-color);
@@ -579,55 +599,115 @@ textarea {
 }
 
 /* Advantages */
-.advantages {
-  display: flex;
+
+.advantage-item:not(:last-child) {
+  margin-bottom: 72px;
 }
 
 .advantage-item-title {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: calc(24 / 20);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: calc(40 / 36);
+  text-align: center;
   letter-spacing: 0.02em;
-}
-
-.advantage-item:not(:last-child) {
-  margin-right: 24px;
 }
 
 .advantage-item-text {
-  width: 264px;
-  margin-top: 8px;
+  font-style: normal;
+  font-weight: 500;
   font-size: 16px;
   line-height: calc(24 / 16);
   letter-spacing: 0.02em;
+  margin-top: 8px;
+  width: 396px;
 }
 
-/* Advantages icons */
+.advantage-item-text:not(:last-child) {
+  margin-bottom: 72px;
+}
 
 .advantage-icon-field {
-  margin-bottom: 8px;
-  background-color: var(--light-color);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 264px;
-  height: 112px;
-  border-radius: 4px;
+  display: none;
+}
+
+.advantage-icon {
+  visibility: hidden;
+}
+
+@media screen and (min-width: 768px) {
+  .advantage-icon-field {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .advantage-item-title {
+    text-align: left;
+  }
+
+  .advantage-item-text {
+    width: 356px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .advantage-icon-field {
+    margin-bottom: 8px;
+    background-color: var(--light-color);
+
+    justify-content: center;
+    align-items: center;
+    width: 264px;
+    height: 112px;
+    border-radius: 4px;
+  }
+
+  .advantages {
+    display: flex;
+  }
+
+  .advantage-item-title {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: calc(24 / 20);
+  }
+
+  .advantage-item:not(:last-child) {
+    margin-right: 24px;
+  }
+
+  .advantage-item-text {
+    width: 264px;
+    font-weight: 400;
+  }
+
+  .advantage-icon {
+    visibility: visible;
+  }
 }
 
 /* What are we doing */
 
-.direction-title {
-  margin-bottom: 76px;
+.adapt-hidden-section {
+  visibility: hidden;
 }
 
-.direction {
-  display: flex;
-}
+@media screen and (min-width: 1200px) {
+  .adapt-hidden-section {
+    visibility: visible;
+  }
 
-.image-item:not(:last-child) {
-  margin-right: 24px;
-  padding: 0;
+  .direction-title {
+    margin-bottom: 76px;
+  }
+
+  .direction {
+    display: flex;
+  }
+
+  .image-item:not(:last-child) {
+    margin-right: 24px;
+    padding: 0;
+  }
 }
 
 /* Our Team */
@@ -636,8 +716,10 @@ textarea {
   background-color: var(--light-color);
 }
 
-.team-members {
-  display: flex;
+@media screen and (min-width: 768px) {
+  .team-members {
+    display: flex;
+  }
 }
 
 .team-names {
@@ -715,7 +797,15 @@ textarea {
 
 .customers-list {
   display: flex;
-  gap: 24px;
+  flex-wrap: wrap;
+  gap: 16px;
+  justify-content: center;
+}
+
+@media screen and (min-width: 768px) {
+  .customers-list {
+    gap: 24px;
+  }
 }
 
 .customer-icon-link {
