--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,7 @@ textarea {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: var(--dark-color);
+  margin-bottom: 72px;
 }
 
 .hidden {
@@ -402,6 +403,10 @@ textarea {
   background-color: var(--dark-color);
 }
 
+.footer-content {
+  width: 100%;
+}
+
 .footer-left {
   display: flex;
   flex-direction: column;
@@ -437,32 +442,6 @@ textarea {
   font-size: 16px;
   line-height: calc(24 / 16);
   letter-spacing: 0.02em;
-}
-
-@media screen and (min-width: 768px) {
-  .footer-content {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .footer-left {
-    margin-bottom: 0;
-    margin-right: 120px;
-  }
-  .subscribe-form {
-    display: flex;
-    gap: 24px;
-  }
-
-  .footer-input {
-    width: 264px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .footer-center {
-    margin-right: 80px;
-  }
 }
 
 /* Footer-icons */
@@ -565,6 +544,57 @@ textarea {
   background-color: var(--pressed-state-color);
 }
 
+@media screen and (min-width: 768px) {
+  .footer-left {
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+
+  .footer-content {
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 108px;
+  }
+
+  .footer-left {
+    margin-bottom: 0;
+    margin-right: 24px;
+  }
+  .subscribe-form {
+    flex-direction: row;
+    align-items: flex-start;
+    gap: 24px;
+  }
+
+  .footer-input {
+    width: 264px;
+  }
+
+  .footer-center {
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+
+  .footer-right {
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-left {
+    margin-right: 120px;
+  }
+
+  .footer-center {
+    margin-right: 80px;
+  }
+
+  .footer-content {
+    flex-wrap: nowrap;
+    padding-left: 0;
+  }
+}
 /* Main Page Content */
 
 /* Hero */
@@ -656,6 +686,11 @@ textarea {
 }
 
 @media screen and (min-width: 768px) {
+  .advantages {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
   .advantage-icon-field {
     display: flex;
     flex-wrap: wrap;
@@ -717,10 +752,6 @@ textarea {
     display: block;
   }
 
-  .direction-title {
-    margin-bottom: 76px;
-  }
-
   .direction {
     display: flex;
   }
@@ -743,9 +774,52 @@ textarea {
   align-items: center;
 }
 
+.team-card {
+  background-color: var(--white-color);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
+  padding: 0;
+  width: 264px;
+}
+
+.team-card:not(:last-child) {
+  margin-bottom: 72px;
+}
+
 @media screen and (min-width: 768px) {
   .team-members {
-    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .team-card:nth-child(2n + 1) {
+    margin-right: 24px;
+  }
+  .team-card:not(:last-child) {
+    margin-bottom: 0;
+  }
+  .team-card:nth-child(n + 3) {
+    margin-top: 64px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team-members {
+    flex-wrap: nowrap;
+  }
+
+  .team-card:nth-child(n + 3) {
+    margin-top: 0;
+  }
+  .team-card:nth-child(2n + 1) {
+    margin-right: 0;
+  }
+
+  .team-card:not(:last-child) {
+    margin-right: 24px;
   }
 }
 
@@ -764,17 +838,6 @@ textarea {
   text-align: center;
   letter-spacing: 0.02em;
   margin-top: 8px;
-}
-
-.team-card {
-  background-color: var(--white-color);
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-  border-radius: 0px 0px 4px 4px;
-  padding: 0;
-  margin-right: 24px;
-  margin-top: 72px;
-  width: 264px;
 }
 
 .team-card-bottom {
