--- a/css/styles.css
+++ b/css/styles.css
@@ -902,24 +902,14 @@ textarea {
 .customers-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 16px;
+  column-gap: 16px;
+  row-gap: 72px;
   justify-content: center;
-}
-@media screen and (max-width: 767.98px) {
-  .customer-icon-field:nth-child(n + 3) {
-    margin-top: 48px;
-  }
 }
 
 @media screen and (min-width: 768px) {
   .customers-list {
-    gap: 24px;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1199.98px) {
-  .customer-icon-field:nth-child(n + 4) {
-    margin-top: 48px;
+    column-gap: 24px;
   }
 }
 
