--- a/css/styles.css
+++ b/css/styles.css
@@ -948,6 +948,8 @@ textarea {
 
 .button-line {
   display: flex;
+  flex-wrap: wrap;
+  gap: 8px 0;
   justify-content: center;
   padding-top: 96px;
 }
@@ -984,9 +986,14 @@ textarea {
 
 .work-examples {
   list-style: none;
-  display: flex;
-  flex-wrap: wrap;
   margin-top: 72px;
+}
+
+@media screen and (min-width: 768px) {
+  .work-examples {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .work-link {
